@@ -20,9 +20,10 @@ Release 2.8.0 - UNRELEASED
 
     HDFS-8824. Do not use small blocks for balancing the cluster.  (szetszwo)
 
-
     HDFS-8883. NameNode Metrics : Add FSNameSystem lock Queue Length.
     (Anu Engineer via xyao)
+
+    HDFS-8880. NameNode metrics logging. (Arpit Agarwal)
 
   OPTIMIZATIONS
 
